# CRobot-Android

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-android-optimize.txt
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: shape_start_btn.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
core/: build.gradle
core/src/main/res/anim/: checkbox_to_checked_icon_null_anim.xml  checkbox_to_unchecked_icon_null_anim.xml
core/src/main/res/drawable/: checkbox_checked.xml  checkbox_checked_to_unchecked_anim.xml  checkbox_selector.xml  checkbox_unchecked.xml  checkbox_unchecked_to_checked_anim.xml  dialog_bg.xml  dialog_button_bg.xml  float_bar_c.xml  float_bar_c_active.xml  float_bar_c_layer.xml  float_bar_c_layer_active.xml  float_bar_pause.xml  float_bar_pause_layer.xml  float_bar_play.xml  float_bar_play_layer.xml  float_bar_play_pause_selector.xml  float_bar_setting.xml  float_bar_setting_layer.xml  float_bar_snap.xml  float_bar_snap_layer.xml  ic_close.xml  input_border.xml  input_curse.xml  input_focus.xml  input_selector.xml  progress_background.xml  radio_off.xml  radio_off_to_on_anim.xml  radio_on.xml  radio_on_to_off_anim.xml  radio_selector.xml  screen_setting_1.xml  screen_setting_2.xml  screen_setting_background.xml  screen_setting_btn.xml  spinner_down.xml  spinner_dropdown_item.xml  spinner_item.xml  spinner_layer.xml  theme_logo.xml  (+1 more)
debug/: build.gradle  proguard-android-optimize.txt
debug/src/main/: AndroidManifest.xml
engine_boostrap/: build.gradle
engine_cjs/: build.gradle
engine_cjs/src/main/cpp/: CMakeLists.txt  main.cpp
engine_cjs/src/main/cpp/cjs/: CMakeLists.txt  cjs.cpp  cjs.h
engine_cjs/src/main/cpp/core/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  image.h  jvm.cpp  jvm.h  zip.h
engine_cjs/src/main/cpp/image/: color.h  feature.h  finder.h  image.h
engine_cjs/src/main/cpp/quickjs/: CMakeLists.txt
engine_clua/: build.gradle  proguard-rules.pro
engine_clua/src/main/cpp/: CMakeLists.txt  main.cpp
engine_clua/src/main/cpp/clua/: CMakeLists.txt  clua.cpp  clua.h
engine_clua/src/main/cpp/core/: bootstrap.cpp  bootstrap.h  image.cpp  jvm.cpp
engine_clua/src/main/cpp/lua/: fpconv.h  llex.c  lualib.h  lundump.c
engine_runtime/: build.gradle
lib_chineseocr_lite/: build.gradle
lib_chineseocr_lite/src/main/cpp/: CMakeLists.txt
lib_chineseocr_lite/src/main/cpp/src/: AngleNet.cpp  AngleNet.h  CrnnNet.cpp  CrnnNet.h  DbNet.cpp  DbNet.h  OcrLite.cpp  OcrLite.h  jvm.h  main.cpp
lib_yolov8/: build.gradle
lib_yolov8/src/main/cpp/: CMakeLists.txt
lib_yolov8/src/main/cpp/src/: main.cpp  yolov8.cpp  yolov8.h  yolov8_cls.cpp  yolov8_det.cpp  yolov8_obb.cpp  yolov8_pose.cpp  yolov8_seg.cpp
(+258 files in other folders)
